# Object-Oriented-Programming

./: README.md
task1/: Army.cpp  Barracks.cpp  Buildings.cpp  CMakeLists.txt  Cell.cpp  GameMapManager.cpp  InputValidation.cpp  MainRunner.cpp  ResourceGenerator.cpp  Resources.cpp  Troops.cpp  Village.cpp  compile.sh  headerFile.h  run.sh
task2/: Board.java  Cell.java  InputValidation.java  MainClass.java  compile.sh
